test/semantic_errors/invalid_declaration9.mc
void main() {
    int a, b = c, c; /* c not declared */
}